# car-rental/src/main/resources/api.yaml
@@ -12,13 +12,8 @@ security:
   - api_key: [ ]
 
 components:
-  securitySchemes:
-    api_key:
-      type: apiKey
-      in: header
-      name: Authorization
   schemas:
-    Car:
+    CarDTO:
       type: object
       required:
         - id
@@ -41,7 +36,7 @@ components:
           description: Availability of the car
 
 paths:
-  /cars:
+  /api/v1/cars:
     post:
       summary: Create a new car
       operationId: createCar
@@ -51,14 +46,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Car'
+              $ref: '#/components/schemas/CarDTO'
       responses:
         '201':
           description: Created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Car'
+                $ref: '#/components/schemas/CarDTO'
     put:
       summary: Update a car by ID
       operationId: updateCarById
@@ -68,54 +63,41 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Car'
+              $ref: '#/components/schemas/CarDTO'
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Car'
+                $ref: '#/components/schemas/CarDTO'
         '404':
           description: Car not found
+  /api/v1/cars/{id}:
     delete:
       summary: Delete a car by ID
       operationId: deleteCarById
-      responses:
-        '204':
-          description: No Content
-        '404':
-          description: Car not found
-  /cars/available:
+      parameters:
+        - name: id
+          in: path
+          description: ID of the car to delete
+          required: true
+          schema:
+            type: integer
+            format: int64
+  /api/v1/cars/available:
     get:
       summary: List all available cars by model or brand
       operationId: listAvailableCars
       parameters:
-        - name: model
+        - name: modelName
           in: query
           description: Filter by model
           schema:
             type: string
-        - name: brand
+        - name: brandName
           in: query
           description: Filter by brand
-          schema:
-            type: string
-        - name: page
-          in: query
-          description: The page number
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-        - name: size
-          in: query
-          description: The page size
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 50
       responses:
         '200':
           description: OK
@@ -124,4 +106,4 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Car'
+                  $ref: '#/components/schemas/CarDTO'
